--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yoomath",
   "productName": "Yoo-Math",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A place for math...",
   "main": "src/index.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "deploy": "electron-builder build --win --publish always"
   },
   "build": {
-    "appId": "calculator",
+    "appId": "yoomath",
     "win": {
       "target": [
         "nsis"
@@ -24,15 +24,14 @@
     "nsis": {
       "installerIcon": "src/assets/img/favicon.ico",
       "uninstallerIcon": "src/assets/img/favicon.ico",
-      "uninstallDisplayName": "Calculat∅r",
-      "license": "license.txt",
+      "uninstallDisplayName": "Yoo-Math",
       "oneClick": false,
       "allowToChangeInstallationDirectory": true
     }
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/Yoo-BaboboDev/Yoo-Math.git"
+    "type": "git",
+    "url": "https://github.com/Yoo-Babobo/Yoo-Math.git"
   },
   "keywords": [],
   "author": {
@@ -78,6 +77,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.57",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
     "@electron-forge/maker-zip": "^6.0.0-beta.57",
-    "electron": "13.1.3"
+    "electron": "^13.1.3",
+    "electron-builder": "^22.11.7"
   }
 }
