--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yoomath",
   "productName": "Yoo-Math",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A place for math...",
   "main": "src/index.js",
   "scripts": {
@@ -69,7 +69,8 @@
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^4.3.9",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "winreg": "^1.2.4"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.57",
